# nis-mc

./: GEMINI.md  README.md  append.py  pyproject.toml  rewrite.py  temp.py  test_check.py  test_grad.py  test_nis.py  test_nis_seed.py
nis_mc/: __init__.py
nis_mc/flows/: __init__.py  affine_coupling.py  realnvp.py
nis_mc/functions/: __init__.py  breit_wigner.py  diagonal_resonance.py
nis_mc/integrators/: __init__.py  base.py  nis.py  nis_integrator.py  vegas.py  vegas_integrator.py
nis_mc/utils/: __init__.py  constants.py
nis_mc/visualization/: __init__.py  comparison_plot.py  vegas_failure_plot.py
notebooks/: 01_intro_breit_wigner.ipynb
scripts/: run_benchmark.py
tests/: test_integrators.py  test_integrators_2d.py
